Do some code changes based on IDE inspection results